--- a/src/research/stm32f4-rtc-fromgps/stm32f4-rtc-fromgps.ioc
+++ b/src/research/stm32f4-rtc-fromgps/stm32f4-rtc-fromgps.ioc
@@ -1,137 +1,138 @@
 #MicroXplorer Configuration settings - do not modify
-File.Version=6
-GPIO.groupedBy=Group By Peripherals
-KeepUserPlacement=false
 Mcu.Family=STM32F4
-Mcu.IP0=NVIC
-Mcu.IP1=RCC
+VP_RTC_VS_RTC_Activate.Signal=RTC_VS_RTC_Activate
+ProjectManager.MainLocation=Core/Src
+PC15-OSC32_OUT.Mode=LSE-External-Oscillator
+ProjectManager.ProjectFileName=stm32f4-rtc-fromgps.ioc
+PH0-OSC_IN.Signal=RCC_OSC_IN
+USART2.IPParameters=VirtualMode,BaudRate
+RCC.CortexFreq_Value=168000000
+ProjectManager.KeepUserCode=true
+PA10.Mode=Asynchronous
+Mcu.UserName=STM32F407VETx
+Mcu.PinsNb=12
+ProjectManager.NoMain=false
+RCC.PLLCLKFreq_Value=168000000
+RCC.PLLQCLKFreq_Value=84000000
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_RTC_Init-RTC-false-LL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_USART2_UART_Init-USART2-false-HAL-true
+VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
+RCC.RTCFreq_Value=32768
+ProjectManager.DefaultFWLocation=true
+ProjectManager.DeletePrevious=true
+USART1.IPParameters=VirtualMode
+RCC.APB1CLKDivider=RCC_HCLK_DIV4
+PC14-OSC32_IN.Signal=RCC_OSC32_IN
+NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+USART2.BaudRate=9600
+PinOutPanel.RotationAngle=0
+RCC.FamilyName=M
+RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
+ProjectManager.StackSize=0x400
+PA13.Signal=SYS_JTMS-SWDIO
+PA3.Mode=Asynchronous
+Mcu.IP4=USART1
+RCC.FCLKCortexFreq_Value=168000000
+Mcu.IP5=USART2
+NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 Mcu.IP2=RTC
 Mcu.IP3=SYS
-Mcu.IP4=USART1
-Mcu.IP5=USART2
+Mcu.IP0=NVIC
+PA9.Mode=Asynchronous
+Mcu.IP1=RCC
+Mcu.UserConstants=
+ProjectManager.TargetToolchain=STM32CubeIDE
+RCC.RCC_RTC_Clock_Source=RCC_RTCCLKSOURCE_LSE
+Mcu.ThirdPartyNb=0
+RCC.HCLKFreq_Value=168000000
 Mcu.IPNb=6
-Mcu.Name=STM32F407V(E-G)Tx
-Mcu.Package=LQFP100
+RCC.I2SClocksFreq_Value=192000000
+ProjectManager.PreviousToolchain=
+RCC.APB2TimFreq_Value=168000000
+PA9.Signal=USART1_TX
+RCC.VcooutputI2S=192000000
+Mcu.Pin6=PA9
+Mcu.Pin7=PA10
+ProjectManager.RegisterCallBack=
+Mcu.Pin8=PA13
+Mcu.Pin9=PA14
+PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
+RCC.AHBFreq_Value=168000000
+PH0-OSC_IN.Mode=HSE-External-Oscillator
 Mcu.Pin0=PC14-OSC32_IN
 Mcu.Pin1=PC15-OSC32_OUT
-Mcu.Pin10=VP_RTC_VS_RTC_Activate
-Mcu.Pin11=VP_SYS_VS_Systick
+GPIO.groupedBy=Group By Peripherals
 Mcu.Pin2=PH0-OSC_IN
 Mcu.Pin3=PH1-OSC_OUT
 Mcu.Pin4=PA2
+RCC.VCOI2SOutputFreq_Value=384000000
 Mcu.Pin5=PA3
-Mcu.Pin6=PA9
-Mcu.Pin7=PA10
-Mcu.Pin8=PA13
-Mcu.Pin9=PA14
-Mcu.PinsNb=12
-Mcu.ThirdPartyNb=0
-Mcu.UserConstants=
-Mcu.UserName=STM32F407VETx
-MxCube.Version=5.6.0
-MxDb.Version=DB.5.0.60
-NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+ProjectManager.ProjectBuild=false
+RCC.HSE_VALUE=8000000
+NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.ForceEnableDMAVector=true
-NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+board=custom
+RCC.VCOOutputFreq_Value=336000000
+NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+ProjectManager.LastFirmware=true
+ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.26.1
+MxDb.Version=DB.6.0.21
+RCC.APB2Freq_Value=84000000
+ProjectManager.BackupPrevious=false
+MxCube.Version=6.2.1
+PC14-OSC32_IN.Mode=LSE-External-Oscillator
+RCC.VCOInputFreq_Value=2000000
+PA14.Mode=Serial_Wire
+File.Version=6
+VP_SYS_VS_Systick.Mode=SysTick
+RCC.EthernetFreq_Value=168000000
+PH1-OSC_OUT.Signal=RCC_OSC_OUT
+RCC.RCC_RTC_Clock_SourceVirtual=RCC_RTCCLKSOURCE_LSE
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
-NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true
-NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
-NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-PA10.Mode=Asynchronous
-PA10.Signal=USART1_RX
 PA13.Mode=Serial_Wire
-PA13.Signal=SYS_JTMS-SWDIO
-PA14.Mode=Serial_Wire
-PA14.Signal=SYS_JTCK-SWCLK
-PA2.Mode=Asynchronous
-PA2.Signal=USART2_TX
-PA3.Mode=Asynchronous
-PA3.Signal=USART2_RX
-PA9.Mode=Asynchronous
-PA9.Signal=USART1_TX
-PC14-OSC32_IN.Mode=LSE-External-Oscillator
-PC14-OSC32_IN.Signal=RCC_OSC32_IN
-PC15-OSC32_OUT.Mode=LSE-External-Oscillator
-PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
-PH0-OSC_IN.Mode=HSE-External-Oscillator
-PH0-OSC_IN.Signal=RCC_OSC_IN
-PH1-OSC_OUT.Mode=HSE-External-Oscillator
-PH1-OSC_OUT.Signal=RCC_OSC_OUT
-PinOutPanel.RotationAngle=0
-ProjectManager.AskForMigrate=true
-ProjectManager.BackupPrevious=false
-ProjectManager.CompilerOptimize=6
-ProjectManager.ComputerToolchain=false
-ProjectManager.CoupleFile=false
-ProjectManager.CustomerFirmwarePackage=
-ProjectManager.DefaultFWLocation=true
-ProjectManager.DeletePrevious=true
-ProjectManager.DeviceId=STM32F407VETx
-ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.25.0
 ProjectManager.FreePins=false
-ProjectManager.HalAssertFull=false
-ProjectManager.HeapSize=0x200
-ProjectManager.KeepUserCode=true
-ProjectManager.LastFirmware=true
-ProjectManager.LibraryCopy=1
-ProjectManager.MainLocation=Core/Src
-ProjectManager.NoMain=false
-ProjectManager.PreviousToolchain=
-ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=stm32f4-rtc-fromgps.ioc
-ProjectManager.ProjectName=stm32f4-rtc-fromgps
-ProjectManager.StackSize=0x400
-ProjectManager.TargetToolchain=STM32CubeIDE
-ProjectManager.ToolChainLocation=
-ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_RTC_Init-RTC-false-LL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_USART2_UART_Init-USART2-false-HAL-true
-RCC.48MHZClocksFreq_Value=84000000
-RCC.AHBFreq_Value=168000000
-RCC.APB1CLKDivider=RCC_HCLK_DIV4
-RCC.APB1Freq_Value=42000000
-RCC.APB1TimFreq_Value=84000000
-RCC.APB2CLKDivider=RCC_HCLK_DIV2
-RCC.APB2Freq_Value=84000000
-RCC.APB2TimFreq_Value=168000000
-RCC.CortexFreq_Value=168000000
-RCC.EthernetFreq_Value=168000000
-RCC.FCLKCortexFreq_Value=168000000
-RCC.FamilyName=M
-RCC.HCLKFreq_Value=168000000
-RCC.HSE_VALUE=8000000
-RCC.HSI_VALUE=16000000
-RCC.I2SClocksFreq_Value=192000000
 RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLQCLKFreq_Value,RCC_RTC_Clock_Source,RCC_RTC_Clock_SourceVirtual,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VcooutputI2S
-RCC.LSI_VALUE=32000
+ProjectManager.AskForMigrate=true
+Mcu.Name=STM32F407V(E-G)Tx
+ProjectManager.HalAssertFull=false
+RCC.RTCHSEDivFreq_Value=4000000
+PA2.Signal=USART2_TX
+ProjectManager.ProjectName=stm32f4-rtc-fromgps
+ProjectManager.UnderRoot=true
+ProjectManager.CoupleFile=false
+PH1-OSC_OUT.Mode=HSE-External-Oscillator
+RCC.48MHZClocksFreq_Value=84000000
 RCC.MCO2PinFreq_Value=168000000
-RCC.PLLCLKFreq_Value=168000000
+RCC.SYSCLKFreq_VALUE=168000000
+Mcu.Package=LQFP100
+NVIC.ForceEnableDMAVector=true
+KeepUserPlacement=false
+USART2.VirtualMode=VM_ASYNC
+NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+USART1.VirtualMode=VM_ASYNC
+ProjectManager.CompilerOptimize=6
+ProjectManager.ToolChainLocation=
+RCC.LSI_VALUE=32000
+VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+PA10.Signal=USART1_RX
+PA14.Signal=SYS_JTCK-SWCLK
+ProjectManager.HeapSize=0x200
+NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+ProjectManager.ComputerToolchain=false
+RCC.HSI_VALUE=16000000
+NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
+RCC.APB2CLKDivider=RCC_HCLK_DIV2
+Mcu.Pin11=VP_SYS_VS_Systick
 RCC.PLLM=8
 RCC.PLLN=168
-RCC.PLLQCLKFreq_Value=84000000
-RCC.RCC_RTC_Clock_Source=RCC_RTCCLKSOURCE_LSE
-RCC.RCC_RTC_Clock_SourceVirtual=RCC_RTCCLKSOURCE_LSE
-RCC.RTCFreq_Value=32768
-RCC.RTCHSEDivFreq_Value=4000000
-RCC.SYSCLKFreq_VALUE=168000000
-RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
-RCC.VCOI2SOutputFreq_Value=384000000
-RCC.VCOInputFreq_Value=2000000
-RCC.VCOOutputFreq_Value=336000000
-RCC.VcooutputI2S=192000000
-USART1.IPParameters=VirtualMode
-USART1.VirtualMode=VM_ASYNC
-USART2.BaudRate=9600
-USART2.IPParameters=VirtualMode,BaudRate
-USART2.VirtualMode=VM_ASYNC
-VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
-VP_RTC_VS_RTC_Activate.Signal=RTC_VS_RTC_Activate
-VP_SYS_VS_Systick.Mode=SysTick
-VP_SYS_VS_Systick.Signal=SYS_VS_Systick
-board=custom
+Mcu.Pin10=VP_RTC_VS_RTC_Activate
+RCC.APB1TimFreq_Value=84000000
+PA2.Mode=Asynchronous
+NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+RCC.APB1Freq_Value=42000000
+ProjectManager.CustomerFirmwarePackage=
+ProjectManager.DeviceId=STM32F407VETx
+ProjectManager.LibraryCopy=1
+PA3.Signal=USART2_RX
 isbadioc=false
