--- a/src/board/ARK/ark.ioc
+++ b/src/board/ARK/ark.ioc
@@ -1,10 +1,10 @@
 #MicroXplorer Configuration settings - do not modify
 Mcu.Family=STM32F1
 ProjectManager.MainLocation=Core/Src
-NVIC.ADC1_2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 PA2.GPIO_PuPd=GPIO_NOPULL
 RCC.MCOFreq_Value=64000000
 Dma.USART1_TX.2.Direction=DMA_MEMORY_TO_PERIPH
+Dma.ADC1.4.Priority=DMA_PRIORITY_LOW
 Dma.I2C1_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 NVIC.DMA1_Channel5_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.I2C1_EV_IRQn=true\:0\:0\:false\:false\:true\:true\:true
@@ -12,7 +12,7 @@ ProjectManager.KeepUserCode=true
 Mcu.UserName=STM32F103C8Tx
 PB10.Mode=I2C
 VP_ADC1_TempSens_Input.Mode=IN-TempSens
-ADC1.ContinuousConvMode=DISABLE
+ADC1.ContinuousConvMode=ENABLE
 Dma.I2C1_TX.1.Mode=DMA_NORMAL
 RCC.PLLCLKFreq_Value=64000000
 PB14.GPIO_Label=DPC_RST
@@ -30,12 +30,12 @@ PA6.GPIO_Label=BMS2
 PB0.GPIO_Label=PGOOD1
 PB6.GPIO_Label=TIME
 Dma.USART1_RX.3.MemDataAlignment=DMA_MDATAALIGN_BYTE
-RCC.OscillatorTypeHSE-ClockTree=RCC_OSCILLATORTYPE_HSE
 USART1.IPParameters=VirtualMode
 PA3.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PB11.Signal=I2C2_SDA
 PB15.Signal=GPIO_Output
 PA5.PinState=GPIO_PIN_SET
+Dma.ADC1.4.PeriphInc=DMA_PINC_DISABLE
 PA2.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
 PB15.PinState=GPIO_PIN_SET
 PinOutPanel.RotationAngle=0
@@ -72,6 +72,7 @@ Mcu.Pin6=PA5
 Mcu.Pin7=PA6
 Mcu.Pin8=PA7
 Mcu.Pin9=PB0
+Dma.ADC1.4.Instance=DMA1_Channel1
 PA1.GPIO_PuPd=GPIO_NOPULL
 RCC.AHBFreq_Value=64000000
 Mcu.Pin0=PD0-OSC_IN
@@ -93,6 +94,7 @@ NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 RCC.PLLMUL=RCC_PLL_MUL8
 PA4.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 ProjectManager.FirmwarePackage=STM32Cube FW_F1 V1.8.3
+VP_ADC1_Vref_Input.Mode=IN-Vrefint
 MxDb.Version=DB.6.0.21
 PA2.PinState=GPIO_PIN_SET
 PB0.GPIOParameters=GPIO_PuPd,GPIO_Label
@@ -113,7 +115,7 @@ Dma.I2C1_RX.0.Direction=DMA_PERIPH_TO_MEMORY
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 Dma.USART1_TX.2.MemDataAlignment=DMA_MDATAALIGN_BYTE
 NVIC.I2C1_ER_IRQn=true\:0\:0\:false\:false\:true\:true\:true
-Dma.RequestsNb=4
+Dma.RequestsNb=5
 PB6.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 ProjectManager.HalAssertFull=false
 PB0.Locked=true
@@ -138,6 +140,7 @@ PA2.GPIO_Label=BMS6
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 IWDG.Reload=0xfff
 PA10.Signal=USART1_RX
+Dma.ADC1.4.MemInc=DMA_MINC_ENABLE
 PA5.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
 PA1.PinState=GPIO_PIN_SET
 PB14.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
@@ -148,6 +151,7 @@ PB5.GPIO_Label=LED
 Dma.Request2=USART1_TX
 Dma.Request1=I2C1_TX
 RCC.APB1TimFreq_Value=64000000
+Dma.Request4=ADC1
 Dma.Request3=USART1_RX
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.DMA1_Channel4_IRQn=true\:0\:0\:false\:false\:true\:false\:true
@@ -177,13 +181,14 @@ Dma.USART1_RX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphData
 ADC1.Rank-0\#ChannelRegularConversion=1
 PD1-OSC_OUT.Mode=HSE-External-Clock-Source
 PA10.Mode=Asynchronous
-Mcu.PinsNb=28
+Mcu.PinsNb=29
 Dma.USART1_TX.2.MemInc=DMA_MINC_ENABLE
 ProjectManager.NoMain=false
 Dma.USART1_RX.3.PeriphInc=DMA_PINC_DISABLE
-ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,NbrOfConversion,DiscontinuousConvMode,ContinuousConvMode,master
+ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,NbrOfConversion,DiscontinuousConvMode,ContinuousConvMode,master,Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion
 PB6.GPIO_PuPd=GPIO_NOPULL
 ADC1.DiscontinuousConvMode=DISABLE
+Dma.ADC1.4.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
 ProjectManager.DefaultFWLocation=true
 PA6.PinState=GPIO_PIN_SET
 Dma.USART1_TX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
@@ -203,17 +208,19 @@ PA4.PinState=GPIO_PIN_SET
 PB11.Mode=I2C
 ProjectManager.TargetToolchain=STM32CubeIDE
 PB7.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
+Dma.ADC1.4.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 PB9.Mode=I2C
 PA9.Signal=USART1_TX
+ADC1.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_VREFINT
 Dma.I2C1_RX.0.MemInc=DMA_MINC_ENABLE
 Dma.I2C1_TX.1.Instance=DMA1_Channel6
-PB9.Locked=true
 PB5.Locked=true
+PB9.Locked=true
 ProjectManager.RegisterCallBack=
 RCC.USBFreq_Value=64000000
 PB14.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
 PA1.Signal=GPIO_Output
-PA7.GPIO_PuPd=GPIO_PULLUP
+PA7.GPIO_PuPd=GPIO_NOPULL
 PB1.Locked=true
 PD0-OSC_IN.Mode=HSE-External-Clock-Source
 PB10.Signal=I2C2_SCL
@@ -235,33 +242,38 @@ VP_ADC1_TempSens_Input.Signal=ADC1_TempSens_Input
 Dma.USART1_TX.2.Priority=DMA_PRIORITY_LOW
 PA1.GPIO_Label=BMS5
 VP_SYS_VS_Systick.Mode=SysTick
+VP_ADC1_Vref_Input.Signal=ADC1_Vref_Input
+Dma.ADC1.4.Mode=DMA_CIRCULAR
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 Dma.I2C1_TX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
 PA4.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
 Dma.USART1_RX.3.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 PB15.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
-ADC1.NbrOfConversion=1
+ADC1.NbrOfConversion=2
 PA13.Mode=Serial_Wire
 ProjectManager.FreePins=false
-RCC.IPParameters=ADCFreqValue,ADCPresc,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,EnbaleCSS,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,MCOFreq_Value,OscillatorTypeHSE-ClockTree,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,PLLSourceVirtual,RTCFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USBFreq_Value,VCOOutput2Freq_Value
+Dma.ADC1.4.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+RCC.IPParameters=ADCFreqValue,ADCPresc,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,EnbaleCSS,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,PLLSourceVirtual,RTCFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USBFreq_Value,VCOOutput2Freq_Value
 IWDG.IPParameters=Reload,Prescaler
 ProjectManager.AskForMigrate=true
 Mcu.Name=STM32F103C(8-B)Tx
-Mcu.Pin26=VP_RTC_VS_RTC_Activate
-Mcu.Pin27=VP_SYS_VS_Systick
+Mcu.Pin26=VP_IWDG_VS_IWDG
+Mcu.Pin27=VP_RTC_VS_RTC_Activate
 PA2.Signal=GPIO_Output
 Mcu.Pin24=VP_ADC1_TempSens_Input
 Dma.USART1_RX.3.Priority=DMA_PRIORITY_LOW
 ProjectManager.UnderRoot=true
-Mcu.Pin25=VP_IWDG_VS_IWDG
+Mcu.Pin25=VP_ADC1_Vref_Input
 Dma.USART1_TX.2.PeriphInc=DMA_PINC_DISABLE
 I2C1.OwnAddress=0x68
 Mcu.IP8=SYS
 Mcu.IP9=USART1
+Mcu.Pin28=VP_SYS_VS_Systick
 Mcu.IP6=RCC
 Mcu.IP7=RTC
 ProjectManager.CoupleFile=false
 PA4.Signal=GPIO_Output
+ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_239CYCLES_5
 RCC.SYSCLKFreq_VALUE=64000000
 Mcu.Pin22=PB8
 PB5.Signal=GPIO_Output
@@ -280,6 +292,7 @@ PB5.GPIO_PuPd=GPIO_NOPULL
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 USART1.VirtualMode=VM_ASYNC
 ProjectManager.CompilerOptimize=6
+ADC1.Rank-1\#ChannelRegularConversion=2
 VP_IWDG_VS_IWDG.Signal=IWDG_VS_IWDG
 NVIC.EXTI9_5_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 PA14.Signal=SYS_JTCK-SWCLK
@@ -291,6 +304,7 @@ Mcu.Pin16=PA10
 Mcu.Pin13=PB14
 Mcu.Pin14=PB15
 Mcu.Pin19=PB5
+Dma.ADC1.4.Direction=DMA_PERIPH_TO_MEMORY
 ProjectManager.ComputerToolchain=false
 Mcu.Pin17=PA13
 Dma.USART1_TX.2.Mode=DMA_NORMAL
